--- a/wishlistbackend/package.json
+++ b/wishlistbackend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Backend of a Fullstack app",
   "main": "index.js",
-  
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -28,5 +27,10 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "react-router-dom": "^6.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
